Version 3.1.6
- Added method to remove party_relationships when party is removed
Version 3.1.5 - 7-26-2013
- Pass database host to pg_dump in rake compass_ae:backup:postgres
Version 3.1.4 - 6-12-2013
- Added Party#has_role_type?
Version 3.1.3 - 04-22-2013
- Added latitude longitude to postal address
- Updated check to see if CompassAE instance is active
Version 3.1.2 - 04-08-2013
- Added GUID to CompassAEInstance
- Fixed bug in CompassAE Engine loading
Version 3.1.1 - 02-25-2013
- Fixed extension loading bugs
Version 3.1.0 - 01-11-2013
- Upgraded to rails 3.2
Version 3.0.6 - 01-10-2013
- New Security Implementation