@@ -1,5 +1,8 @@
 Version 3.1.6
 - Added method to remove party_relationships when party is removed
+- Added scope :with_status to has_tracked_status
+- Added methods has_status?, had_status? and has_had_status? & other minor improvements to has_tracked_status
+- Added add_status alias to has_tracked_status for legacy support
 Version 3.1.5 - 7-26-2013
 - Pass database host to pg_dump in rake compass_ae:backup:postgres
 Version 3.1.4 - 6-12-2013
